--- a/public/scss/partials/_standings-id.scss
+++ b/public/scss/partials/_standings-id.scss
@@ -10,4 +10,46 @@
 
 .table-standings {
     font-size: 0.9rem;
+
+    tbody {
+        tr {
+            --bs-table-hover-bg: #3f4041;
+
+            &:nth-child(1),
+            &:nth-child(2),
+            &:nth-child(3),
+            &:nth-child(4),
+            &:nth-child(5),
+            &:nth-child(6) {
+                --bs-table-bg: #007058;
+                --bs-table-hover-bg: #237c69;
+
+            }
+
+            &:nth-child(7),
+            &:nth-child(8) {
+                --bs-table-bg: #a1920a;
+                --bs-table-hover-bg: #b8ae58;
+            }
+
+            &:nth-child(9),
+            &:nth-child(10) {
+                --bs-table-bg: #75330c;
+                --bs-table-hover-bg: #8f5e42;
+            }
+
+            td {
+
+                a {
+                    color: #fff;
+                    text-decoration: none;
+                }
+
+                img {
+                    margin: 0 0.25rem;
+                    width: 25px;
+                }
+            }
+        }
+    }
 }
