--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -24,7 +24,7 @@
 
     <header>
         <a href="/">
-            <img class="header__img" src="./../img/logo.jpg" alt="" />
+            <img class="header__img" src="./../../img/logo.jpg" alt="" />
         </a>
         <form action="/logout" method="post">
             <button class="btn btn-success">LOGOUT</button>
