--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -9,9 +9,10 @@
 @import "partials/main";
 @import "partials/create-tournament";
 @import "partials/lottery";
-@import "partials/standings";
 @import "partials/standings-id";
 @import "partials/tournaments-id";
+@import "partials/fixture";
+@import "partials/fixture-id";
 @import "partials/upload-games";
 @import "partials/face-to-face";
 @import "partials/records";
