--- a/public/views/standings-id.ejs
+++ b/public/views/standings-id.ejs
@@ -34,13 +34,16 @@
                                             <%=i+1%>
                                         </td>
                                         <td>
-                                            <a
-                                                href="/fixture/<%=tournament.tournamentId%>/<%=tournament.sortedStanding[i].teamId%>">
-                                                <%=tournament.sortedStanding[i].team%>
-                                            </a>
                                             <img src="<%=tournament.sortedStanding[i].logo%>"
                                                 alt="<%=tournament.sortedStanding[i].team%>">
-
+                                            <a href="/fixture/<%=tournament.tournamentId%>/<%=tournament.sortedStanding[i].teamId%>"
+                                                class="team-name">
+                                                <%=tournament.sortedStanding[i].team%>
+                                            </a>
+                                            <a href="/fixture/<%=tournament.tournamentId%>/<%=tournament.sortedStanding[i].teamId%>"
+                                                class="team-code">
+                                                <%=tournament.sortedStanding[i].teamCode%>
+                                            </a>
                                         </td>
                                         <td>
                                             <%=tournament.sortedStanding[i].player[0] +
