--- a/public/views/records-id.ejs
+++ b/public/views/records-id.ejs
@@ -2,7 +2,8 @@
     <main>
         <div class="individual-records">
             <div class="individual-records__container">
-                <div class="title">Racha actual de <span class="bold">
+                <div class="title">Racha actual de
+                    <span class="bold">
                         <%=playerQuery%>
                     </span>
                 </div>
