--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;0,800;1,400&display=swap");
 *,
 ::after,
@@ -25,6 +26,12 @@
 
 body {
   background-color: rgba(255, 254, 254, 0.918);
+}
+
+/* Firefox */
+/* Para retirar flechas en los input de tipo número */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .italic {
@@ -1403,9 +1410,12 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: 0.5rem;
-  outline: #dc3545 2px solid;
+  outline: #dc3545 3px solid;
   padding: 0.5rem 0;
   width: 400px;
+}
+.container__fixture-id .fixture-match.finished {
+  outline-color: #3c9e39;
 }
 .container__fixture-id .fixture-match .match-info {
   -webkit-box-align: center;
@@ -1420,10 +1430,23 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
       -ms-flex-direction: column;
           flex-direction: column;
   text-decoration: none;
-  width: 120px;
+  width: 150px;
 }
 .container__fixture-id .fixture-match .match-info .match-info__team {
+  border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
+  width: 150px;
+}
+.container__fixture-id .fixture-match .match-info .match-info__team:focus {
+  outline: 0;
 }
 .container__fixture-id .fixture-match .match-info img {
   max-width: 100px;
@@ -1443,7 +1466,42 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
   width: 100px;
 }
 .container__fixture-id .fixture-match .match-score .match-score__goals {
+  border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 3rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  width: 30px;
+  /* Para retirar flechas en los input de tipo número */
+}
+.container__fixture-id .fixture-match .match-score .match-score__goals::-webkit-outer-spin-button, .container__fixture-id .fixture-match .match-score .match-score__goals::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.container__fixture-id .fixture-match .match-score .match-score__goals:focus {
+  outline: 0;
+}
+.container__fixture-id .fixture-match .match-score .fixture-edit {
+  background-color: #d76615;
+  border: 0;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 0.75rem;
+  outline: #000 2px solid;
+  padding: 0.25rem 0.5rem;
+}
+.container__fixture-id .fixture-match .match-score .fixture-submit {
+  background-color: rgb(81, 179, 72);
+  border: 0;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 0.75rem;
+  outline: #000 2px solid;
+  padding: 0.25rem 0.5rem;
 }
 .container__fixture-id .fixture-match .match-score .match-score__versus {
   font-size: 1.5rem;
