--- a/public/scss/partials/_fixture-id.scss
+++ b/public/scss/partials/_fixture-id.scss
@@ -10,9 +10,13 @@
         flex-wrap: nowrap;
         justify-content: space-between;
         margin: 0.5rem;
-        outline: #dc3545 2px solid;
+        outline: #dc3545 3px solid;
         padding: 0.5rem 0;
         width: 400px;
+
+        &.finished {
+            outline-color: #3c9e39;
+        }
 
         .match-info {
             align-items: center;
@@ -20,10 +24,19 @@
             display: flex;
             flex-direction: column;
             text-decoration: none;
-            width: 120px;
+            width: 150px;
 
             .match-info__team {
+                border: 0;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
                 text-align: center;
+                width: 150px;
+
+                &:focus {
+                    outline: 0;
+                }
             }
 
             img {
@@ -39,7 +52,43 @@
             width: 100px;
 
             .match-score__goals {
+                border: 0;
+                display: flex;
                 font-size: 3rem;
+                justify-content: center;
+                text-align: center;
+                width: 30px;
+
+                /* Para retirar flechas en los input de tipo número */
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+
+                &:focus {
+                    outline: 0;
+                }
+            }
+
+            .fixture-edit {
+                background-color: #d76615;
+                border: 0;
+                border-radius: 10px;
+                color: #fff;
+                font-size: 0.75rem;
+                outline: #000 2px solid;
+                padding: 0.25rem 0.5rem;
+            }
+
+            .fixture-submit {
+                background-color: rgb(81, 179, 72);
+                border: 0;
+                border-radius: 10px;
+                color: #fff;
+                font-size: 0.75rem;
+                outline: #000 2px solid;
+                padding: 0.25rem 0.5rem;
             }
 
             .match-score__versus {
