--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -22,6 +22,12 @@ body {
     background-color: rgba(255, 254, 254, 0.918);
 }
 
+/* Firefox */
+/* Para retirar flechas en los input de tipo número */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 .italic {
     font-style: italic;
 }
