--- a/public/views/fixture-id.ejs
+++ b/public/views/fixture-id.ejs
@@ -6,47 +6,56 @@
         </div>
         <div class="container__fixture-id">
             <%tournamentById.fixture.forEach(function(element, index) {%>
-                <div class="fixture-match">
-                    <a class="match-info" href="/fixture/<%=tournamentById.id%>/<%=element.teamIdP1%>">
-                        <span class="match-info__team">
-                            <%=element.teamP1%>
-                        </span>
-                        <img src="<%=element.logoTeamP1%>" alt="<%=element.logoTeamP1%>">
-                        <span>
-                            <%=element.playerP1%>
-                        </span>
-                    </a>
-                    <div class="match-score">
-                        <%if(element.scoreP1 !==undefined){%>
-                            <span class="match-score__goals">
-                                <%=element.scoreP1%>
-                            </span>
-                            <span class="match-score__versus">-</span>
-                            <%} else {%>
-                                <span class="match-score__goals">-</span>
-                                <span class="match-score__versus">vs</span>
+                <%if(element.scoreP1 !==undefined){%>
+                    <form class="fixture-match finished"
+                        action="/update-games/<%=tournamentById.id%>/<%=element.matchId%>?_method=PUT" method="post"
+                        autocomplete="off">
+                        <%} else {%>
+                            <form class="fixture-match" action="/upload-games/<%=tournamentById.id%>" method="post"
+                                autocomplete="off">
                                 <%};%>
-                                    <%if(element.scoreP2 !==undefined){%>
-                                        <span class="match-score__goals">
-                                            <%=element.scoreP2%>
-                                        </span>
-                                        <%} else {%>
-                                            <span class="match-score__goals">-</span>
-                                            <%};%>
-                                                <input type="submit" value="Editar" class="fixture-submit">
-                    </div>
-                    <a class="match-info" href="/fixture/<%=tournamentById.id%>/<%=element.teamIdP2%>">
-                        <span class="match-info__team">
-                            <%=element.teamP2%>
-                        </span>
-                        <img src="<%=element.logoTeamP2%>" alt="<%=element.logoTeamP2%>">
-                        <span>
-                            <%=element.playerP2%>
-                        </span>
-                    </a>
-                </div>
+                                    <div class="match-info">
+                                        <input name="teamP1" class="match-info__team" value="<%=element.teamP1%>"
+                                            readonly>
+                                        <a href="/fixture/<%=tournamentById.id%>/<%=element.teamIdP1%>">
+                                            <img src="<%=element.logoTeamP1%>" alt="<%=element.teamP1%>">
+                                        </a>
+                                        <input name="playerP1" class="match-info__team" value="<%=element.playerP1%>"
+                                            readonly>
+                                    </div>
+                                    <div class="match-score">
+                                        <%if(element.scoreP1 !==undefined){%>
+                                            <input name="scoreP1" class="match-score__goals"
+                                                value="<%=element.scoreP1%>">
+                                            <span class="match-score__versus">-</span>
+                                            <%} else {%>
+                                                <input name="scoreP1" class="match-score__goals" type="number" min="0"
+                                                    required>
+                                                <span class="match-score__versus">vs</span>
+                                                <%};%>
+                                                    <%if(element.scoreP2 !==undefined){%>
+                                                        <input name="scoreP2" class="match-score__goals"
+                                                            value="<%=element.scoreP2%>">
+                                                        <input type="submit" value="Editar" class="fixture-edit">
+                                                        <%} else {%>
+                                                            <input name="scoreP2" class="match-score__goals"
+                                                                type="number" min="0" required>
+                                                            <input type="submit" value="Confirmar"
+                                                                class="fixture-submit">
+                                                            <%};%>
+                                    </div>
+                                    <div class="match-info">
+                                        <input name="teamP2" class="match-info__team" value="<%=element.teamP2%>"
+                                            readonly>
+                                        <a href="/fixture/<%=tournamentById.id%>/<%=element.teamIdP2%>">
+                                            <img src="<%=element.logoTeamP2%>" alt="<%=element.teamP2%>">
+                                        </a>
+                                        <input name="playerP2" class="match-info__team" value="<%=element.playerP2%>"
+                                            readonly>
+                                    </div>
+                            </form>
 
-                <%});%>
+                            <%});%>
         </div>
         <div class="return">
             <div>Volver a <a href="/fixture">
