--- a/public/views/lottery.ejs
+++ b/public/views/lottery.ejs
@@ -65,7 +65,7 @@
                             <option selected disabled value="">Equipo</option>
                             <%tournamentById.teams.sort(function(a,b) { if(a.team> b.team) { return 1 } else {
                                 return-1}}).forEach(function(element, index) {%>
-                                <option id="<%=element.team%>" value="<%=element.team%>">
+                                <option id="<%=element.team%>" value="<%=element.id%>|<%=element.countryCode%>">
                                     <%=element.team%>
                                 </option>
                                 <%});%>
